--- a/src/main/resources/templates/volunteer/volunteer-inquiry.html
+++ b/src/main/resources/templates/volunteer/volunteer-inquiry.html
@@ -388,7 +388,8 @@
         </div>
     </body>
     <script th:inline="javascript">
-        const inquirys = [[${inquirys}]]
+        const volunteer = [[${volunteer}]]
+        const attachments = [[${attachments}]]
     </script>
-    <script src="../../static/js/volunteer/volunteer-inquiry.js"></script>
+    <script src="/js/volunteer/volunteer-inquiry.js"></script>
 </html>
