--- a/src/main/resources/templates/volunteer/volunteer-list.html
+++ b/src/main/resources/templates/volunteer/volunteer-list.html
@@ -19,16 +19,14 @@
                             class="accordion-container contest-list-filters"
                             type="box"
                         >
-                            <div class="write-introduce">
+                            <div class="write-introduce" th:if="${memberType == 'ORGANIZATION'}">
                                 <div class="title">편하게 작성하세요!</div>
                                 <div class="desc">
                                     사소한 도움이라도 괜찮아요. 우리가 나누는
                                     작은 마음들이 모여 더 큰 기적을 만듭니다.
                                 </div>
                                 <button class="write-button">
-                                    <span class="visual-correction"
-                                        >작성하기</span
-                                    >
+                                    <a href="/volunteer/volunteer-write" class="visual-correction">작성하기</a>
                                 </button>
                             </div>
                         </div>
