--- a/src/main/resources/templates/admin.html
+++ b/src/main/resources/templates/admin.html
@@ -1573,7 +1573,7 @@
                                         class="Divider_divider Divider_horizontal Divider_lightBG Divider_spacing3 Divider_caption2 FriendsList_divider"
                                     />
                                     <!-- body_layout -->
-                                    <div class="ServiceLayout_container">
+                                    <div class="ServiceLayout_container post-render-container">
                                         <div class="filter_wrap">
                                             <div class="SortFilterOptions">
                                                 <span
@@ -1679,7 +1679,7 @@
                                             </div>
         
                                             <!-- 목록 리스트 -->
-                                            <div class="ServiceTable_row_wrapper">
+                                            <div class="ServiceTable_row_wrapper post-filter-wrapper">
                                                 <div class="ServiceTable_row">
                                                     <div class="ServiceTable_cell">
                                                         <input
