--- a/src/main/resources/templates/admin.html
+++ b/src/main/resources/templates/admin.html
@@ -4,6 +4,7 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <!-- 관리자 홈 -->
+        <link rel="stylesheet" href="/css/admin_new.css">
         <link
             rel="stylesheet"
             href="/css/admin_page/amdin_main/sub_main.css"
@@ -62,7 +63,7 @@
     </head>
     <body>
         <div id="root">
-            <div id="AppLayot_Container" class="AppLayout_container">
+            <div id="AppLayot_Container" class="app-layout-container">
                 <div class="AppGNBNavbar_container">
                     <div class="AppGNBNavbar_flex">
                         <div class="StudioLogo_container">
