--- a/src/main/resources/templates/admin.html
+++ b/src/main/resources/templates/admin.html
@@ -2913,7 +2913,10 @@
     <!-- 관리자 홈 -->
     <script src="/js/admin/admin_service.js"></script>
     <script src="/js/admin/admin_layout.js"></script>
+    <script src="/js/admin/admin_new.js"></script>
     <script src="/js/admin.js"></script>
+
+
     <script src="/js/adminPage/admin_page/admin.js"></script>
     <!-- 회원 목록 -->
     <script src="/js/adminPage/admin_user/admin_user.js"></script>
