--- a/src/main/resources/templates/volunteer/volunteer-write.html
+++ b/src/main/resources/templates/volunteer/volunteer-write.html
@@ -16,7 +16,7 @@
     <body>
         <div class="content-wrapper">
             <div class="content-container contents">
-                <form action="">
+                <form th:action="@{/volunteer/vlounteer-write}" method="post" enctype="multipart/form-data" name="volunteer-write-form">
                     <main class="content-form contest-launch form">
                         <div class="section-divider"></div>
                         <h3 class="write-introduce">✍🏻봉사 모집 게시판 작성</h3>
