--- a/src/main/resources/templates/admin.html
+++ b/src/main/resources/templates/admin.html
@@ -64,30 +64,30 @@
     <body>
         <div id="root">
             <div id="AppLayot_Container" class="app-layout-container">
-                <div class="AppGNBNavbar_container">
-                    <div class="AppGNBNavbar_flex">
-                        <div class="StudioLogo_container">
+                <div class="GNB-bar-container">
+                    <div class="GNB-bar-flex">
+                        <div class="studio-logo-container">
                             <button
-                                class="StudioLogo_logo"
+                                class="studio-logo"
                                 type="button"
                                 aria-label="로고버튼"
                             >온정 관리자 페이지</button>
-                            <div class="Admin_page_logo"></div>
+                            <div class="admin-page-logo"></div>
                         </div>
                         <!-- <div class="StudioStatus_stateBox">
                             <span class="StudioStatus_state">작업 중</span>
                         </div> -->
                     </div>
-                    <div class="AppGNBNavbar_flex AppGNBNavbar_rightBox_1">
-                        <div class="ProjectInfo_container">
+                    <div class="GNB-bar-flex GNB-bar-rightBox">
+                        <div class="project-info-container">
                             <button
-                                class="ProjectInfo_infoButton"
+                                class="project-info-button"
                                 type="button"
                                 aria-controls="project-info-box"
                                 aria-expanded="true"
                             >
                                 관리자 ID:
-                                <span class="ProjectInfo_emphasis">Yanawa</span>
+                                <span class="project-info-emphasis">Yanawa</span>
                                 <!-- <span class="ProjectInfo_text_info">정보</span> -->
                                 <!-- <svg
                                     viewBox="0 0 24 24"
@@ -156,14 +156,14 @@
                             ></span>
                         </div> -->
                         <!-- 미리보기/로그아웃 버튼/ 로그아웃 버튼은 로그아웃 버튼으로 변경 /미리보기 미정-->
-                        <div class="PreviewExitButtons_container">
+                        <div class="exit-buttons-container">
                             <!-- <button class="Button_button PreviewExitButtons_button" type="button"><span><span class="Button_children">미리보기</span></span></button> -->
                             <button
-                                class="Button_button PreviewExitButtons_button"
+                                class="button-button exit-buttons-button"
                                 type="button"
                             >
                                 <span
-                                    ><span class="Button_children"
+                                    ><span class="button-children"
                                         >로그아웃</span
                                     ></span
                                 >
@@ -172,10 +172,10 @@
                     </div>
                 </div>
                 <!-- 메인컨텐츠 영역 -->
-                <div class="AppLayout_main_1">
+                <div class="sidebar-layout-wrap">
                     <!-- 사이드바 영역 -->
-                    <div class="AppSidebarLayout_container">
-                        <div class="AppSidebarLayout_content">
+                    <div class="sidebar-layout-container">
+                        <div class="sidebar-layout-content">
                             <!-- 관리자페이지 서비스 기능 카테고리 -->
                             <div class="MenuItems_section">
                                 <!-- 대카테고리 -->
