--- a/src/main/resources/static/css/main/login-header-no-noti.css
+++ b/src/main/resources/static/css/main/login-header-no-noti.css
@@ -962,3 +962,24 @@ p {
 .bpfqva .toolbar-area .toolbar-row .util .util-btns > li.member div.opener:hover {
     opacity: 0.7;
 }
+/* 알림 아이콘에 빨간 점을 표시하는 스타일 */
+.red-dot {
+    position: absolute;
+    top: 0;
+    right: 2px;
+    height: 6px;
+    width: 6px;
+    background-color: red;
+    border-radius: 50%;
+    display: inline-block;
+}
+
+.notification-icon {
+    position: relative;
+    display: inline-block;
+    cursor: pointer;
+}
+
+.noti-box.unread {
+    background-color: #f0f8ff;
+}
