--- a/src/main/resources/static/css/main/login-header-no-noti.css
+++ b/src/main/resources/static/css/main/login-header-no-noti.css
@@ -939,7 +939,7 @@ p {
     border-top: 1px solid rgb(219, 222, 226);
     text-align: start;
     padding: 0px;
-    width: 100%;
+    width: 287px;
 }
 .noti-title,
 .noti-date {
