--- a/src/main/resources/templates/main/basic-header.html
+++ b/src/main/resources/templates/main/basic-header.html
@@ -109,7 +109,7 @@
                                         >
                                             <a
                                                 class="sc-ccsojp jgkeau toolbar-nav-item-link"
-                                                href="/rank/rank"
+                                                href="/rank"
                                             >
                                                 <p>
                                                     랭킹<sup
