--- a/src/main/resources/templates/main/footer.html
+++ b/src/main/resources/templates/main/footer.html
@@ -83,7 +83,7 @@
                                         </svg></div
                                 ></a>
                                 <a
-                                    href=""
+                                    href="/help/help-notification-list"
                                     class="hlisls leeli link"
                                     target="_blank"
                                     >공지사항
@@ -104,7 +104,7 @@
                                         </svg></div
                                 ></a>
                                 <a
-                                    href=""
+                                    href="/help/help"
                                     class="hlisls leeli link"
                                     target="_blank"
                                     >고객 센터
