--- a/src/main/resources/templates/main/login-header-no-noti.html
+++ b/src/main/resources/templates/main/login-header-no-noti.html
@@ -326,7 +326,7 @@
                                         >
                                             <a
                                                 class="sc-ccsojp jgkeau toolbar-nav-item-link"
-                                                href="/rank/rank"
+                                                href="/rank"
                                             >
                                                 <p>
                                                     랭킹<sup
