--- a/src/main/resources/static/css/main/rank-for-main.css
+++ b/src/main/resources/static/css/main/rank-for-main.css
@@ -158,6 +158,7 @@ h2 {
 section.top-rank .rank-cards {
     display: flex;
     margin-top: 24px;
+    justify-content: center;
 }
 section.top-rank .rank-cards .expert-rank-card {
     margin-right: 24px;
