--- a/src/main/resources/templates/volunteer/volunteer-write.html
+++ b/src/main/resources/templates/volunteer/volunteer-write.html
@@ -237,7 +237,7 @@
                             </div>
                         </div>
                         <div class="submit-button-container">
-                            <button id="submit-review" class="submit-button">작성완료</button>
+                            <button type="submit" id="submit-volunteer" class="submit-button">작성완료</button>
                         </div>
                     </main>
                 </form>
