--- a/src/main/resources/templates/admin.html
+++ b/src/main/resources/templates/admin.html
@@ -913,7 +913,7 @@
                         >
                         <div style="max-width: 1080px; margin: 24px 16px 0;">
                             <div class="notification-list notification-table">
-                                <div class="ServiceHeader_container"><h2 class="ServiceHeader_title">공지사항 목록</h2><button>작성하기</button></div>
+                                <div class="ServiceHeader_container"><h2 class="ServiceHeader_title">공지사항 목록</h2><button id="notification-write-button">작성하기</button></div>
                                 <div class="list-top">
                                     <div class="category-notification-num">번호</div>
                                     <div class="category-notification-title noti-title-admin">제목</div>
@@ -959,128 +959,100 @@
                         </div>
                         </section>
                         <section class="admin-page" data-value="공지사항 작성">
-                            <section class="admin-page" data-value="고객센터 문의 답변" id="inquiry_answer">
-                                <div style="max-width: 1080px; margin: 24px 16px 0;">
-                                    <h1>고객센터 문의 답변</h1>
-                                    <div class="form">
-                                        <form
-                                                id="new-request"
-                                                class="request-form"
-                                                data-form
-                                                data-form-type="request"
-                                                action="/help/write"
-                                                accept-charset="UTF-8"
-                                                method="post"
+                            <div style="max-width: 1080px; margin: 24px 16px 0;">
+                                <h1>공지사항 작성</h1>
+                                <div class="form">
+                                    <form
+                                            class="request-form"
+                                            data-form
+                                            data-form-type="request"
+                                            action="/help/write"
+                                            accept-charset="UTF-8"
+                                            method="post"
+                                    >
+                                        <div class="form-field required">
+                                            <label for="request-title">공지사항 제목</label>
+                                            <input
+                                                    type="text"
+                                                    name="request-title"
+                                                    maxlength="150"
+                                                    size="150"
+                                                    placeholder="간단한 제목을 입력해주세요."
+                                                    value="마이페이지에서 문제가 발생했는데 해결해주세요."
+                                            />
+                                        </div>
+                                        <div class="form-field-gap"></div>
+                                        <div class="form-field required">
+                                            <label for="request-description">문의 내용</label>
+                                            <textarea
+                                                    name="request-description"
+                                            >마이페이지를 열었더니 제가 이전에 충전한 포인트가 없어졌는데 이거 왜 그런건가요? 사진 첨부해서 보냅니다.</textarea>
+                                            <input
+                                                    type="hidden"
+                                                    name="request-description-input"
+                                                    value="text/plain"
+                                                    style="display: none"
+                                                    autocomplete="off"
+                                            />
+                                        </div>
+                                        <div
+                                                class="form-field-agreements"
+                                                style="clear: both"
                                         >
-                                            <div class="form-field required">
-                                                <label for="request-title">문의 제목</label>
-                                                <input
-                                                        type="text"
-                                                        name="request-title"
-                                                        id="request-title"
-                                                        maxlength="150"
-                                                        size="150"
-                                                        placeholder="간단한 제목을 입력해주세요."
-                                                        value="마이페이지에서 문제가 발생했는데 해결해주세요."
-                                                />
-                                            </div>
-                                            <div class="form-field-gap"></div>
-                                            <div class="form-field required">
-                                                <label for="request-description">문의 내용</label>
-                                                <textarea
-                                                        name="request-description"
-                                                        id="request-description"
-                                                >마이페이지를 열었더니 제가 이전에 충전한 포인트가 없어졌는데 이거 왜 그런건가요? 사진 첨부해서 보냅니다.</textarea>
-                                                <input
-                                                        type="hidden"
-                                                        name="request-description-input"
-                                                        id="request-description-input"
-                                                        value="text/plain"
-                                                        style="display: none"
-                                                        autocomplete="off"
-                                                />
-                                            </div>
-                                            <div class="form-field">
-                                                <label for="request-attachments"
-                                                >첨부파일</label
-                                                >
-                                                <div id="upload-zone" class="upload-zone">
-                                                    <input
-                                                            type="file"
-                                                            multiple="true"
-                                                            id="attach-input"
-                                                            data-fileupload="true"
-                                                            data-dropzone="upload-dropzone"
-                                                    />
-                                                    <span>
-                                        <a>파일 추가</a>
-                                        또는 파일을 여기로 드래그
-                                    </span>
-                                                </div>
-                                                <ul
-                                                        id="attachments-upload-pool"
-                                                        class="attachments-upload-pool"
-                                                ></ul>
-                                            </div>
-                                            <div
-                                                    class="form-field-agreements"
-                                                    style="clear: both"
+                                            <p id="request-agreements">
+                                                (주)온정은 정보통신망 이용촉진 및 정보보호
+                                                등 관한 법률을 준수하며 고객님의 개인정보를
+                                                수집하고 소중하게 다루고 있습니다. 1. 수집
+                                                및 이용 항목 : 이메일, 이름, 연락처 2. 수집
+                                                및 이용 목적 : 앱 이용 문의에 대한 답변 관련
+                                                업무 3, 보유 및 이용 기간 : 수집 목적이
+                                                달성되면 모든 개인정보를 파기합니다. 동의를
+                                                하지 않을 경우 문의한 내용에 대한 답변에
+                                                제한이 있을 수 있습니다.
+                                            </p>
+                                            <label for="request-agreements-check" class="checked"
+                                            >동의합니다.</label
                                             >
-                                                <p id="request-agreements">
-                                                    (주)온정은 정보통신망 이용촉진 및 정보보호
-                                                    등 관한 법률을 준수하며 고객님의 개인정보를
-                                                    수집하고 소중하게 다루고 있습니다. 1. 수집
-                                                    및 이용 항목 : 이메일, 이름, 연락처 2. 수집
-                                                    및 이용 목적 : 앱 이용 문의에 대한 답변 관련
-                                                    업무 3, 보유 및 이용 기간 : 수집 목적이
-                                                    달성되면 모든 개인정보를 파기합니다. 동의를
-                                                    하지 않을 경우 문의한 내용에 대한 답변에
-                                                    제한이 있을 수 있습니다.
-                                                </p>
-                                                <label for="request-agreements-check" class="checked"
-                                                >동의합니다.</label
-                                                >
-                                                <input
-                                                        name="request-agreements-check"
-                                                        type="hidden"
-                                                        value="off"
-                                                        autocomplete="off"
-                                                />
-                                                <input
-                                                        type="checkbox"
-                                                        value="on"
-                                                        id="request-agreements-check"
-                                                        name="request-agreements-check"
-                                                />
-                                            </div>
-                                            <div class="form-field required">
-                                                <label for="request-description">답변 작성</label>
-                                                <textarea
-                                                        name="request-description"
-                                                        id="request-description"
-                                                ></textarea>
-                                                <input
-                                                        type="hidden"
-                                                        name="request-description-input"
-                                                        id="request-description-input"
-                                                        value="text/plain"
-                                                        style="display: none"
-                                                        autocomplete="off"
-                                                />
-                                            </div>
-                                            <footer>
-                                                <input
-                                                        type="submit"
-                                                        name="submit"
-                                                        id="submit-button"
-                                                        value="답변제출"
-                                                        style="margin-bottom: 30px;"
-                                                />
-                                            </footer>
-                                        </form>
-                                    </div>
+                                            <input
+                                                    name="request-agreements-check"
+                                                    type="hidden"
+                                                    value="off"
+                                                    autocomplete="off"
+                                            />
+                                            <input
+                                                    type="checkbox"
+                                                    value="on"
+                                                    id="request-agreements-check"
+                                                    name="request-agreements-check"
+                                            />
+                                        </div>
+                                        <div class="form-field required">
+                                            <label for="request-description">답변 작성</label>
+                                            <textarea
+                                                    name="request-description"
+                                                    id="request-description"
+                                            ></textarea>
+                                            <input
+                                                    type="hidden"
+                                                    name="request-description-input"
+                                                    id="request-description-input"
+                                                    value="text/plain"
+                                                    style="display: none"
+                                                    autocomplete="off"
+                                            />
+                                        </div>
+                                        <footer>
+                                            <input
+                                                    type="submit"
+                                                    name="submit"
+                                                    id="submit-button"
+                                                    value="답변제출"
+                                                    style="margin-bottom: 30px;"
+                                            />
+                                        </footer>
+                                    </form>
                                 </div>
-                            </section>
+                            </div>
                         </section>
                         <section class="admin-page" data-value="공지사항 조회">
                             <div class="notification-wrap">
