--- a/src/main/resources/templates/main/login-header-no-noti.html
+++ b/src/main/resources/templates/main/login-header-no-noti.html
@@ -394,7 +394,7 @@
                                     </div>
                                     <a
                                         class="sc-ccsojp jbsnef btn-request btn-request-case-2"
-                                        href=""
+                                        href="/charge"
                                     >
                                         <span class="visual-correction"
                                             >충전하기
