--- a/src/main/resources/templates/mypage/mypage.html
+++ b/src/main/resources/templates/mypage/mypage.html
@@ -122,6 +122,7 @@
                                                         >
                                                             <div
                                                                 class="lnb-item"
+                                                                id="payment-tab"
                                                             >
                                                                 <a
                                                                     href="#"
