--- a/src/main/resources/templates/mypage/mypage.html
+++ b/src/main/resources/templates/mypage/mypage.html
@@ -1612,7 +1612,8 @@
     </body>
     <script th:inline="javascript">
         const member = [[${member}]];
-        const isCharge = [[${charge}]]
+        const isCharge = [[${charge}]];
+        const donationAmount = [[${donationAmount}]];
     </script>
     <script
             src="https://js.bootpay.co.kr/bootpay-5.0.1.min.js"
